# stock-ticker

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
infrastructure/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  ngress.yaml  secret.yaml  service.yaml
src/stock_ticker/: alpha_vantage.py  app.py  config.py  prices.py
tests/: fixtures.py  test_prices.py
